Phase 3: Add advanced product filtering, caching, and enhanced search